--- a/templates/partials/tsl-components.hbs
+++ b/templates/partials/tsl-components.hbs
@@ -24,7 +24,7 @@
             {{#unless (eq key "transmission")}}
               {{value.stat.total}}
             {{else}}
-              {{value.stat.display}}
+              {{{value.stat.display}}}
             {{/unless}}
           </b>
         </td>
