--- a/templates/partials/tsl-summary-rightpane.hbs
+++ b/templates/partials/tsl-summary-rightpane.hbs
@@ -48,7 +48,7 @@
       <tr>
         <td colspan="3">
           <b>{{localize "tsl.summaryPage.fuelCap"}}:&nbsp;</b>
-          {{localnum data.vehicle.fuelCap.max}}
+          {{localnum data.vehicle.fuelCapacity.max}}
         </td>
       </tr>
     </tbody>
