--- a/less/tsl.less
+++ b/less/tsl.less
@@ -237,6 +237,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       place-items: center;
+      padding: 8px 0;
 
       h3 {
         margin: 0;
@@ -248,7 +249,6 @@
         column-gap: 8px;
         place-items: center;
         text-align: center;
-
       }
     }
 
