--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -104,7 +104,7 @@
 
     {{!-- Modifications --}}
     <div class="tab" data-group="primary" data-tab="modifications">
-      <p>Modifications</p>
+      {{> "modules/tsl-module/templates/partials/tsl-modifications.hbs"}}
     </div>
 
     {{!-- Cargo --}}
