Adds localization for modifications page

--- a/templates/partials/tsl-modifications.hbs
+++ b/templates/partials/tsl-modifications.hbs
@@ -1,82 +1,82 @@
 <div class="tsl-mod-totals">
   <div class="mod-total">
-    <h3>Engine IR:</h3>
+    <h3>{{localize "tsl.modificationsPage.engineIR"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Transmission IR:</h3>
+    <h3>{{localize "tsl.modificationsPage.transmissionIR"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Chassis IR:</h3>
+    <h3>{{localize "tsl.modificationsPage.chassisIR"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Suspension IR:</h3>
+    <h3>{{localize "tsl.modificationsPage.suspensionIR"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Horsepower:</h3>
+    <h3>{{localize "tsl.modificationsPage.ho"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Reactivity:</h3>
+    <h3>{{localize "tsl.modificationsPage.re"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Brakes:</h3>
+    <h3>{{localize "tsl.modificationsPage.br"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Top Speed:</h3>
+    <h3>{{localize "tsl.modificationsPage.topSpeed"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Torque:</h3>
+    <h3>{{localize "tsl.modificationsPage.torque"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>XLR8:</h3>
+    <h3>{{localize "tsl.modificationsPage.xlr8"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Stopping:</h3>
+    <h3>{{localize "tsl.modificationsPage.stopping"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Turning:</h3>
+    <h3>{{localize "tsl.modificationsPage.turning"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Load:</h3>
+    <h3>{{localize "tsl.modificationsPage.load"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Hit Points:</h3>
+    <h3>{{localize "tsl.modificationsPage.hitPoints"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Armor Class:</h3>
+    <h3>Armor {{localize "tsl.modificationsPage.ac"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Armor:</h3>
+    <h3>{{localize "tsl.modificationsPage.armor"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Ramming Damage:</h3>
+    <h3>{{localize "tsl.modificationsPage.rammingDamage"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Hours of Operation:</h3>
+    <h3>{{localize "tsl.modificationsPage.hoursOfOperation"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Fuel Capacity:</h3>
+    <h3>{{localize "tsl.modificationsPage.fuelCapacity"}}:</h3>
     <h3>0</h3>
   </div>
   <div class="mod-total">
-    <h3>Weight:</h3>
+    <h3>{{localize "tsl.modificationsPage.weight"}}:</h3>
     <h3>0&nbsp;lbs</h3>
   </div>
 </div>
