--- a/less/tsl.less
+++ b/less/tsl.less
@@ -243,6 +243,20 @@
       }
     }
 
+    .tsl-mod-list {
+      display: grid;
+      place-items: center;
+      text-align: center;
+      row-gap: 4px;
+
+      .tsl-mod {
+        display: grid;
+        grid-template-columns: 1fr repeat(3, auto) 20px;
+        column-gap: 8px;
+        place-items: center;
+      }
+    }
+
     .tsl-cargo-totals {
       display: grid;
       grid-template-columns: 1fr 1fr;
